--- a/css/preguntasF.css
+++ b/css/preguntasF.css
@@ -112,6 +112,10 @@ video{
 .Newsletter_preguntas_frecuentes{
     background: #971F5F17;
 }
+.Subscribe_to_Newsletter {
+    margin-top: 0px !important; 
+    margin-bottom: 0px !important; 
+}
 @media screen and (max-width: 550px) {
     .btn {
         font-size: 15px;
