--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,16 @@ body{
     font-family: Ubuntu-BoldItalic;
     src: url('../PRUEBA/FUENTES/Ubuntu-BoldItalic.ttf');
 }
+@font-face {
+    font-family: Poppins-BoldItalic;
+    src: url('../PRUEBA/FUENTES/Poppins-BoldItalic.ttf');
+}
+@font-face {
+    font-family: Poppins-Bold;
+    src: url('../PRUEBA/FUENTES/Poppins-Bold.ttf');
+}
 /*------header------*/
+ 
 .header_color{
     background-color: white;
     box-shadow: -0.5px 0px 4px #3b3b3b;
@@ -51,8 +60,10 @@ nav .collapse{
 .nav_redes_sociales {
     color: white !important;
 }
-
-
+.nav-item i{
+    margin: 0px 10px;
+}
+ 
 /*----- hero */
 
 
@@ -71,24 +82,21 @@ video{
     color: #FFFFFF;
     text-shadow: -5px 4px #300537;
     z-index: 10;
-    margin-right:13%;
 }
 
 .hero_top_boton{
-    height: 63px !important;
-    width: 311.5px !important;
+    padding: 5px 40px;
     border-radius: 15px;
     background: #FF9900;
     border: none;
     box-shadow: -4px 3px 0px 0px #300537;
     font-family: Poppins-ExtraBoldItalic;
-    font-size: 30px;
+    font-size: 25px;
     letter-spacing: 0em;
     color: #FFFFFF;
     text-shadow: 2px 2px #000000;
     text-align: center;
     z-index: 10;
-    margin-right:15%;
     transform: skew(-20deg, 0deg);
 }
 
@@ -96,9 +104,9 @@ video{
     background: #ff790c;
 }
 .hero_panel_color_cuadrado{
-    position: absolute;
     width: 500px;
     height: 100vh;
+    right: 0px;
     background: linear-gradient(180deg, rgb(48, 5, 55) 0%, rgb(151, 31, 95) 100%);
     clip-path: polygon(64% 0, 100% 0, 100% 100%, 0% 100%);;
 }
@@ -129,12 +137,6 @@ video{
     font-size: 25px;
     color: white;
 }
-.nav-item i{
-    margin: 0px 10px;
-}
-.hero_redes_sociales {
-    margin-right:70%;
-}
 .hero_redes_sociales li {
     list-style: none;
     margin: 0px 10px;
@@ -147,32 +149,26 @@ video{
     color: #da117c;
 }
 
-
-/*------ Best seller ------*/
-@font-face {
-    font-family: Poppins-BoldItalic;
-    src: url('../PRUEBA/FUENTES/Poppins-BoldItalic.ttf');
-}
-.best_sellers{
-    padding: 50px 0px;
-}
-.best_sellers_titulo{
+/* ----    Secciones       ---*/
+.secciones_titulo{
     font-family: Poppins-BoldItalic;
     font-size: 40px;
     font-style: italic;
     letter-spacing: 0em;
-    text-align: left;
     color: #971F5F;
 }
+/*------ Best seller ------*/
 
+.best_sellers{
+    padding: 50px 0px;
+}
 .best_sellers_boton{
-    height: 52px;
-    width: 274px;
+    padding: 5px 40px;
     border-radius: 15px;
     background: #FF9900;
     box-shadow: -4px 3px 0px 0px #30053780;
     font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
@@ -189,7 +185,7 @@ video{
     background: #FFFDFD;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
-    transform: skew(-10deg, 0deg);
+    transform: skew(-10deg,0deg);
 }
 .best_sellers_card > img{
     transform: skew(10deg, 0deg) !important;
@@ -229,6 +225,9 @@ video{
     margin-top: 95%;
     margin-left:30%;
 }
+.item > a{
+    text-decoration: none;
+}
 .icon_carrito{
     top: 165px;
     left: 180px;
@@ -254,47 +253,24 @@ video{
     z-index: -1;
 }
 /*------ About Us ------*/
-
 .about_us_contenido_contenedor{
-    height: 590px !important;
-    width: 80%;
-    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
-    padding: 50px 0px; 
-    padding-right: 0%; 
-    transform: skew(-20deg, 0deg);
-    border-radius: 0px 0px 20px 0px;; 
-    
+    height: 540px !important;
+    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%); 
+    width: 60%;
+    z-index: 10;
 }
-
 .cuadrado{
-    height: 590px;
-    width: 30%;
-    background:#681240 40.89%;
-}
-.about_us_titulo {
-    font-size: 30px;
-    font-family: Poppins-BoldItalic;
-    font-size: 40px !important;
-    font-style: italic;
-    letter-spacing: 0em;
-    text-align: justify;
-    color: #FFFFFF;
-}
-.contenedor_titulo_uno{
-    z-index: 10;
-    left: 0px;
-    margin-top: 2rem;
-}
-.contenedor_titulo_dos{
-    z-index: 10;
-    left: 0px;
-    display: none !important;
+    margin-top: -540px;
+    margin-left: 30%;
+    height: 540px;
+    width: 60%;
+    background:#971F5F 77.42%;
+    transform: skew(-20deg, 0deg);
+    border-radius: 20px;
+    z-index: -1;
 }
 .about_us_informacion{
-    margin-top: 70px ;
     width: 90%;
-    padding-right: 25%;
-    transform: skew(20deg, 0deg);
 }
 .about_us_informacion article{
     margin-top: 15px ;
@@ -305,7 +281,6 @@ video{
     line-height: 18px;
     letter-spacing: 0em;
     text-align: justify;
-    display: inline !important;
     color: #FFFFFF !important;
 }
 .about_us_informacion article{
@@ -313,26 +288,23 @@ video{
     line-height: 19px;
     letter-spacing: 0em;
     text-align: justify;
-    display: inline !important;
     color: #FFFFFF !important;
 }
 
 .about_us_boton{
-    height: 52px;
-    width: 274px;
+    padding: 5px 40px;
     border-radius: 15px;
     background: #FFFFFF;
     box-shadow: -4px 3px 0px 0px #30053780;
     font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 0em;
     text-align: center;
     transform: skew(-20deg, 0deg);
     border: none;
     color: #971F5F;
-    text-shadow: 2px 2px 0px 0px #00000033;
+    text-shadow: 2px 2px 0px #00000033;
 }
-
 .about_us_boton:hover{
     background: #da117c;
     color: white;
@@ -340,23 +312,25 @@ video{
 .svg{
     position: absolute;
     right: 0px;
-    height: 600px;
+    height: 500px;
     z-index: 10;
-    margin-top: -80px;
+    margin-top: -620px;
 }
 
 .about_us_caracteristicas{
     position: absolute;
-    height: 100px;
-    width: 560px;
+    padding:5px 10px;
     right: 0px;
     border-radius: 25px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px 0px #00000040;
     z-index: 100;
-    margin-top: 450px;
+    margin-top: -200px;
     margin-right: 20px;
     transform: skew(-10deg, 0deg);
+}
+.about_us_caracteristicas ul{
+    transform: skew(10deg, 0deg);
 }
 
 .about_us_caracteristicas ul li div{
@@ -375,13 +349,9 @@ video{
 .about_us_caracteristicas ul li div img{
     height: 50px;
     width: 50px;
-    left: 415px;
-    top: 2003px;
     border-radius: 0px;
 }
-.about_us_titulo_img {
-    margin-right:5px ;
-}
+
 
 /*------ Shop by category ------*/
 
@@ -396,59 +366,38 @@ video{
     text-align: left;
     color: #971F5F;
 }
-.shop_by_category_container{
-    margin-top: -4% !important;
-}
-.shop_by_category_card{
-    margin: 0px 5px ;
-}
-.sombra_card1{
-    position: absolute;
-    margin-right:20px ;
-    margin-top: 5px;
-    width: 360px;
-    height: 370px;
-    background: #300537;
-    border: 1px solid #E4E4E4;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    transform: skew(-10deg, 0deg);
-}
-.sombra_card{
-    position: absolute;
-    margin-right:20px ;
-    margin-top: -65px;
-    width: 360px;
-    height: 370px;
-    background: #300537;
-    border: 1px solid #E4E4E4;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 50px;
-    transform: skew(-10deg, 0deg);
-}
+
+
 .shop_by_category_card_img{
-    height: 360px;
-    width: 350px;
     border-radius: 50px;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
     transform: skew(-10deg, 0deg);
+    margin-left: 20px;
+    margin-bottom: 10px;
+    height: 380px;
+    background-color: #300537;
 }
-
+.shop_by_category_card_img::before{
+    content: '';
+    background-color: #000000;
+    border-radius: 50px;
+    border: 1px solid #E4E4E4;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    transform: skew(-10deg, 0deg);
+    margin-left: 10px;
+    height: 380px;
+}
 .shop_by_category_card_img img{
-    height: 360px;
-    width: 350px;
     border-radius: 50px;
     object-fit: cover;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
+    height: 366px;
 
 }
 .shop_by_category_card_titulo{
-    height: 40px;
-    width: 279.5px;
+    padding: 2px 30px;
     border-radius: 10px;
     background: linear-gradient(90deg, #300537 9.44%, #971F5F 97.67%);
     font-family: Poppins-BoldItalic;
@@ -468,14 +417,12 @@ video{
 }
 .shop_by_category_boton{
     margin-top: 5px;
-    height: 52px;
-    width: 274px;
-    margin-right: 20%;
+    padding: 5px 40px;
     border-radius: 15px;
     background: #FF9900;
     box-shadow: -4px 3px 0px 0px #30053780;
     font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
@@ -515,20 +462,13 @@ video{
 /*------- Testimonials -------*/
 
 .testimonials{
-    margin-top: 10px !important;
+    margin-top: 50px !important;
     width: 100%;
     height: 28rem;
     border-radius: 0px;
     background: #971F5F17;
+}
 
-}
-.testimonials_titulo{
-    font-family: Poppins-BoldItalic;
-    font-size: 40px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #971F5F;
-}
 .testimonials_informacion{
     font-family: Ubuntu-BoldItalic;
     font-size: 18px;
@@ -536,24 +476,17 @@ video{
     letter-spacing: 0em;
     text-align: justify;
 }
-.testimonials_informacion h6{
-    font-family: Ubuntu-BoldItalic;
+.testimonials_informacion::first-letter{
     font-size: 25px;
-    line-height: 20px;
-    letter-spacing: 0em;
-    text-align: justify;
 }
 .testimonials_informacion button{
-    height: 42px;
-    width: 254px;
-    border-radius: 15px;
-    background: #971F5F;
+    padding: 5px 30px;
+    border-radius: 20px;
+    background: #971F5F !important;
     box-shadow: -4px 3px 0px 0px #30053780;
     color: white;
     font-family: Poppins-BoldItalic;
     font-size: 25px;
-    line-height: 38px;
-    letter-spacing: 0em;
     text-align: center;
     transform: skew(-20deg, 0deg)
 
@@ -575,12 +508,9 @@ video{
 
 .testimonials_boton {
     cursor: pointer !important;
-    margin-top: -5rem;
-    margin-left: -30%;
     z-index: 100 !important;
     background: #971F5F;
     box-shadow: -4px 3px 0px 0px #30053780;
-
 
 }
 .testimonials_boton:hover{
@@ -590,9 +520,6 @@ video{
     margin-top: -4% !important;
 }
 
-.testimonials_titulo_img{
-    left: 0px;
-}
 
 .testimonials_card{
     height: 300px !important;
@@ -600,6 +527,9 @@ video{
 }
 .testimonials_card > img {
     transform: skew(10deg, 0deg) !important;
+    width: 170px !important;
+    height: 170px !important;
+
 }
 .testimonials_card > div {
     transform: skew(10deg, 0deg) !important;
@@ -624,9 +554,11 @@ video{
 .Subscribe_to_Newsletter{
     margin-top: 30px !important; ;
     margin-bottom: 30px  !important;
+    padding: 30px 0px;
 
 }
 .Subscribe_to_Newsletter h2{
+    padding-top: 10px;
     font-family: Poppins-BoldItalic;
     font-size: 40px;
     letter-spacing: 0em;
@@ -688,11 +620,8 @@ video{
 }
 
 /*------- Footer -------*/
-@font-face {
-    font-family: Poppins-Bold;
-    src: url('../PRUEBA/FUENTES/Poppins-Bold.ttf');
-}
-.footer_info{
+
+footer {
     background: linear-gradient(89.71deg, #300537 23.22%, #971F5F 92.95%);
 }
 .footer_info div img{
@@ -832,25 +761,15 @@ footer a:hover{
         width: 4rem;
     }
 }
-@media screen and (max-width: 950px){
-
-    .shop_by_category_container{
-        flex-direction: column !important;
+@media screen and (max-width: 992px){
+    .shop_by_category_card{
+        margin-bottom: 20px;
     }
     .shop_by_category_card:first-child{
-        margin-top: 10% !important;
+        margin-top: 0%;
     }
-    .shop_by_category_card{
-        margin-top: 30px !important;
-    }
-    .sombra_card1 {
-        width: 250px;
-        height: 207px;
-    }
-    .sombra_card {
-        width: 250px;
-        height: 200px;
-        margin-top: -38px !important;
+    .shop_by_category_card:last-child{
+        margin-top: 0%;
     }
     .owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled{
         display: block !important;
@@ -922,7 +841,7 @@ footer a:hover{
 }
 @media screen and (max-width: 830px){
     .hero_top_titulo{
-        font-size: 60px;
+        font-size: 50px;
     }
     .hero_panel_color_cuadrado{
         display: none;
@@ -984,11 +903,16 @@ footer a:hover{
     }
     
 }
-@media screen and (max-width: 650px){
-    .hero_redes_sociales {
-        margin-right: 40%;
-        z-index: 100;
+@media screen and (max-width: 768px){
+    .nav_redes_sociales {
+        color: #971F5F !important;
     }
+    .navbar-collapse {
+        backdrop-filter: blur(5px);
+        background-color: rgba(255, 255, 255, 0.644);
+    }
+}
+@media screen and (max-width: 650px){
     .testimonials_informacion button{
         width: 200px;
     }
@@ -1030,39 +954,13 @@ footer a:hover{
         margin-top: 5px !important;
     }
 }
-@media screen and (max-width: 575px){
-    .hero_redes_sociales{
-        margin: auto;
-    } 
-    .navbar-collapse{
-        background-color: rgba(255, 255, 255, 0.603);
-        backdrop-filter: blur(3px);
-        border-radius: 5px;
-        top: 100px;
-        width: 80%;
-        max-width: 100%;
-        position: fixed;
-        left: 10%;
-    }
-}
-@media screen and (max-width: 500px){
-    .testimonials_titulo {
-        font-size: 25px !important;
-    }
-    .hero button{
-        width: 200px !important;
-    }
-    main button{
-        width: 200px !important;
-    }
-  
 
+@media screen and (max-width: 500px){
     .hero_top_titulo{
-        font-size: 40px;
+        font-size: 30px;
     }
     .hero_top_boton{
         font-size: 20px;
-        width: 100px
     }
     .mb-3{
         margin-bottom: 0px !important;
@@ -1070,9 +968,7 @@ footer a:hover{
     .footer_b img{
         margin: 0px 5px;
     } 
-    .about_us_titulo ,
-    .best_sellers_titulo,
-    .shop_by_category_titulo{
+    .secciones_titulo{
         font-size: 30px !important;
     }
     .Subscribe_to_Newsletter h2{
@@ -1098,9 +994,6 @@ footer a:hover{
         top: 145px;
         left: 170px
     }
-    .hero_top_titulo {
-        line-height: 60px;
-    }
     .testimonials_card-body {
         margin-top: 95% !important;
     }
@@ -1113,9 +1006,6 @@ footer a:hover{
 
 }
 @media screen and (max-width: 470px){
-    .hero_top_boton{
-        width: 200px !important;
-    }
     .about_us_caracteristicas ul {
         flex-direction: column !important;
     }
