--- a/css/contact.css
+++ b/css/contact.css
@@ -82,8 +82,7 @@ video{
 }
 
 .btn {
-    height: 52px;
-    width: 150px;
+    padding: 5px 40px;
     border-radius: 15px;
     background: #FF9900;
     box-shadow: -4px 3px 0px 0px #30053780;
@@ -101,12 +100,26 @@ video{
     color: white;
 }
 
-.Newsletter_conctact{
-    background: #971F5F17;
-}
 .Subscribe_to_Newsletter {
     margin-top: 0px !important; 
     margin-bottom: 0px !important; 
+    background: #971F5F17;
+}
+@media screen and (max-width: 768px){
+    .hero_top_titulo {
+        font-size: 45px;
+    }
+    .hero_top_boton {
+        padding: 5px 20px;
+        font-size: 17px;
+    }
+
+}
+@media screen and (max-width: 576px){
+    .hero_top_titulo {
+        font-size: 30px;
+    }
+    
 }
 
 @media screen and (max-width: 500px){
