--- a/css/shop.css
+++ b/css/shop.css
@@ -70,18 +70,30 @@ video{
     background: #971F5F17;
 
 }
-.Newsletter_shop{
-    background: #971F5F17;
 
-}
 .shop_card-body{
     height: max-content !important;
 }
 .Subscribe_to_Newsletter {
-     margin-top: 0px !important; 
-     margin-bottom: 0px !important; 
+    margin-top: 0px !important; 
+    margin-bottom: 0px !important; 
+    background: #971F5F17;
 }
+@media screen and (max-width: 768px){
+    .hero_top_titulo {
+        font-size: 45px;
+    }
+    .hero_top_boton {
+        padding: 5px 20px;
+        font-size: 17px;
+    }
 
+}
+@media screen and (max-width: 576px){
+    .hero_top_titulo {
+        font-size: 30px;
+    }
+}
 @media screen and (max-width: 500px){
     .best_sellers_card{
         width: 240px !important;
