--- a/css/styles.css
+++ b/css/styles.css
@@ -253,27 +253,25 @@ video{
     z-index: -1;
 }
 /*------ About Us ------*/
+
 .about_us_contenido_contenedor{
     height: 540px !important;
-    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%); 
-    width: 60%;
-    z-index: 10;
+    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 57.42%); 
+    clip-path: polygon(0 0, 100% 0, 65% 100%, 0% 100%);
 }
 .cuadrado{
     margin-top: -540px;
     margin-left: 30%;
     height: 540px;
-    width: 60%;
+    width: 55%;
     background:#971F5F 77.42%;
-    transform: skew(-20deg, 0deg);
+    transform: skew(-30deg, 0deg);
     border-radius: 20px;
     z-index: -1;
 }
-.about_us_informacion{
-    width: 90%;
-}
+
 .about_us_informacion article{
-    margin-top: 15px ;
+    margin-top: 25px ;
     
 }
 .about_us_informacion article .parrafo::first-letter{
@@ -319,6 +317,7 @@ video{
 
 .about_us_caracteristicas{
     position: absolute;
+    width: max-content;
     padding:5px 10px;
     right: 0px;
     border-radius: 25px;
@@ -363,7 +362,6 @@ video{
     font-family: Poppins-BoldItalic;
     font-size: 40px;
     letter-spacing: 0em;
-    text-align: left;
     color: #971F5F;
 }
 
@@ -374,7 +372,6 @@ video{
     box-shadow: 0px 4px 4px 0px #00000040;
     transform: skew(-10deg, 0deg);
     margin-left: 20px;
-    margin-bottom: 10px;
     height: 380px;
     background-color: #300537;
 }
@@ -410,10 +407,10 @@ video{
 }
 
 .shop_by_category_card:first-child{
-    margin-top: 20%;
+    margin-top: 100px;
 }
 .shop_by_category_card:last-child{
-    margin-top: -20%;
+    margin-top: -100px;
 }
 .shop_by_category_boton{
     margin-top: 5px;
@@ -470,6 +467,7 @@ video{
 }
 
 .testimonials_informacion{
+    width: 50%;
     font-family: Ubuntu-BoldItalic;
     font-size: 18px;
     line-height: 20px;
@@ -479,16 +477,22 @@ video{
 .testimonials_informacion::first-letter{
     font-size: 25px;
 }
-.testimonials_informacion button{
-    padding: 5px 30px;
+.testimonials_boton{
+    margin-top: -50px;
+}
+.testimonials_boton button{ 
+    height: max-content;
+    padding: 5px 40px;
     border-radius: 20px;
     background: #971F5F !important;
     box-shadow: -4px 3px 0px 0px #30053780;
     color: white;
     font-family: Poppins-BoldItalic;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
-    transform: skew(-20deg, 0deg)
+    transform: skew(-20deg, 0deg);
+    cursor: pointer !important;
+    z-index: 10;
 
 }
 .testimonials_panel_color_uno{
@@ -506,15 +510,8 @@ video{
 
 }
 
-.testimonials_boton {
-    cursor: pointer !important;
-    z-index: 100 !important;
-    background: #971F5F;
-    box-shadow: -4px 3px 0px 0px #30053780;
-
-}
-.testimonials_boton:hover{
-    background: #da117c;
+.testimonials_boton button:hover{
+    background: #da117c !important;
 }
 .testimonials_container{
     margin-top: -4% !important;
@@ -576,8 +573,7 @@ video{
     margin: 10px 0px;
 }
 .Subscribe_to_Newsletter form div button{
-    height: 52px;
-    width: 274px;
+    padding: 10px 50px;
     border-radius: 15px;
     background: #FF9900;
     box-shadow: -4px 3px 0px 0px #30053780;
@@ -724,12 +720,8 @@ footer a:hover{
         border: 1px solid #E4E4E4;
         box-shadow: 0px 4px 4px 0px #00000040;
     }
-    .about_us_caracteristicas {
-        height: 115px;
-        width: 350px;
-    }
     .about_us_caracteristicas ul{
-        padding-top: 1rem;
+        padding-top: 0.5rem;
     }
     .about_us_caracteristicas ul li{
         flex-direction: column !important;
@@ -782,15 +774,13 @@ footer a:hover{
     .linea6{
         margin-top: 56rem;
     }
-}
-@media screen and (max-width: 900px){
     .about_us {
-        flex-direction: column;
         background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);;
-        padding: 10px 0px;
     }
     .about_us_contenido_contenedor{
         height: max-content !important;
+        clip-path: none;
+        background: none;
     }
     .svg{
         display: none;
@@ -803,23 +793,12 @@ footer a:hover{
         transform: none;
     }
     .about_us_contenido_contenedor{
-        width: 100%;
         height: max-content;
         transform: none;
         border-radius: 0px;
     }
-
-    .about_us {
-        justify-content: center;
-        align-items: center;
-    }
     .about_us_informacion{
         margin-top: 10px;
-        width: 100% !important;
-        padding-right: 0px !important;
-    }
-    .about_us_contenido_contenedor{
-        padding: 20px 0px !important;
     }
     .cuadrado{
         display: none;
@@ -831,6 +810,7 @@ footer a:hover{
         display: flex !important;
     }
 }
+
 @media screen and (max-width: 830px){
     .hero_top_titulo{
         font-size: 50px;
@@ -850,16 +830,16 @@ footer a:hover{
         align-items: center;
     }
     .testimonials_boton {
-        margin-top: -8rem;
-        margin-left: 0%;
-    }
-    .w-50 {
-        width: 100%!important;
+        margin-top: -60px;
+        position:  relative !important;
+        justify-content: center;
+        height: max-content;
     }
     .testimonials_container{
         margin-top: 1% !important;
     }
     .testimonials_informacion{
+        width: 100% !important;
         margin-top: 30px !important;
         background-color: #68124083;
         color: white;
@@ -867,24 +847,24 @@ footer a:hover{
         padding: 20px !important;
     }
     .testimonials {
-        height: 50rem;
+        height: 46rem;
     }
     .testimonials_panel_color_uno{
-        height: 74rem;
+        height: 66rem;
         right: 100px;
        
     }
     .testimonials_panel_color_dos{
-        margin-top: 41rem;
+        margin-top: 37rem;
         height: 8rem;     
     }
 
     .testimonials.owl-stage-outer{
-        height: 38rem ;
+        height: 30rem ;
     }
     .owl-nav{
         justify-content: center;
-        margin-top: 30px !important;
+        margin-top: 40px !important;
         margin-right: 0px;
     }
     .bi-caret-right-fill {
@@ -1000,6 +980,9 @@ footer a:hover{
 @media screen and (max-width: 470px){
     .about_us_caracteristicas ul {
         flex-direction: column !important;
+    }
+    .about_us_caracteristicas ul {
+        transform: skew(0deg, 0deg) !important;
     }
     .about_us_caracteristicas{
         height: max-content;
