--- a/css/styles.css
+++ b/css/styles.css
@@ -934,7 +934,7 @@ footer a:hover{
     
 }
 @media screen and (max-width: 767px){
-    .navbar-collapse {
+    .navbar-collapse_color {
         backdrop-filter: blur(5px);
         background-color: rgba(255, 255, 255, 0.644);
     }
