--- a/css/preguntasF.css
+++ b/css/preguntasF.css
@@ -50,6 +50,10 @@ video{
 .hero_panel_color_uno{
     right: 175px !important;; 
 }
+.hero_top_titulo {
+    font-size: 60px;
+    margin-bottom: 0px !important;
+}
 /*-----preguntas section-----*/
 .preguntas_frecuentes{
     margin: 50px 0px !important;
