--- a/css/contact.css
+++ b/css/contact.css
@@ -110,7 +110,8 @@ video{
     background: #971F5F17;
 }
 @media screen and (max-width: 768px){
-    .hero_top_titulo {
+    .hero_top_titulo { 
+        margin-top: 10% !important;
         font-size: 45px;
     }
     .hero_top_boton {
@@ -119,12 +120,7 @@ video{
     }
 
 }
-@media screen and (max-width: 576px){
-    .hero_top_titulo {
-        font-size: 30px;
-    }
-    
-}
+
 
 @media screen and (max-width: 500px){
 
