--- a/css/preguntasF.css
+++ b/css/preguntasF.css
@@ -119,7 +119,8 @@ video{
     background: #971F5F17;
 }
 @media screen and (max-width: 768px){
-    .hero_top_titulo {
+    .hero_top_titulo { 
+        margin-top: 10% !important;
         font-size: 45px;
     }
     .hero_top_boton {
@@ -128,11 +129,7 @@ video{
     }
 
 }
-@media screen and (max-width: 576px){
-    .hero_top_titulo {
-        font-size: 30px;
-    }
-}
+
 @media screen and (max-width: 550px) {
     .btn {
         font-size: 15px;
